完成了评论功能的接口，问题页面没有调试完，增加了mybatiscodehelper，修改了数据库的一些设计错误，（真的前期设计不要出错啊），增加了退出登录，拦截器检测登录。

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
     url: jdbc:h2:~/test
   devtools:
     restart:
-      exclude: static/**,public/**,templates/**
+      exclude: classpath:/templates/**
 server:
   port: 8080
 
